--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<div class="container">
 		<header>
-			<h1>GODSTIME Cloud CV</h1>
+			<h1>GODSTIME Cloud CV Github</h1>
 			<p>Web Developer</p>
 		</header>
 		<section>
